[gd_scene load_steps=3 format=3 uid="uid://behppym5kveus"]

[ext_resource type="Script" path="res://scenes/ui/options_menu.gd" id="1_bfo3y"]
[ext_resource type="PackedScene" uid="uid://c2wg2srbob7ow" path="res://scenes/ui/sound_button.tscn" id="3_2ur7n"]

[node name="OptionsMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_bfo3y")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SfxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/SfxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "SFX Volume"

[node name="SfxHSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/SfxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Music Volume"

[node name="MusicHSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="WindowOptionMusicContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/WindowOptionMusicContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Window Mode"

[node name="WindowButton" parent="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/WindowOptionMusicContainer" instance=ExtResource("3_2ur7n")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Fullscreen"

[node name="BackButton" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_2ur7n")]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/WindowOptionMusicContainer/WindowButton" to="." method="_on_window_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
